# GoGoGo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INFRA_PLAN.md  README.md  TASKS.md  dev.sh  docker-compose.vpn.yml  docker-compose.yml  git_report.json  package-lock.json  package.json  playwright.config.ts
backend/: Dockerfile  prep_db.py  pyproject.toml  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_message_type.py  008_add_chat_session_is_favorite.py  11f933521484_create_trips_table.py  343271af4abc_add_cascade_delete_to_trips_session_id_.py  4c07943eb373_create_trips_table.py  855aa2145a4c_change_trips_session_id_fk_to_set_null_.py  9d79d5025f14_initial_migration.py  ba0632ce623d_add_missing_database_indexes.py  dc09a00121a1_add_thinking_steps_column_to_messages.py  ebdfa012cc3d_add_cascade_delete_chat_session_messages.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  agent.py  callbacks.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/repositories/: preference_repo.py  trip_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  chat.py  enums.py  itinerary.py  trip.py  user.py
backend/app/services/: chat_service.py  message_service.py  preference_service.py  streaming_service.py  trip_service.py  (+1 more)
backend/logs/: .gitkeep
backend/samples/: Sample_2.json  Sample_Trip_Itinerary_1.json
backend/scripts/: seed_db.py
backend/tests/: conftest.py
(+118 files in other folders)
