[project]
name = "gogogo-backend"
version = "0.1.0"
description = "gogogo travel agent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<4.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "google-genai>=1.0.0",
    "serpapi>=0.1.0",
    "httpx[socks]>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "pydantic[email]",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.alembic]
script_location = "alembic"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
